some changes in routers and function
