# docs/swagger.json
@@ -11,7 +11,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/image/aws/": {
+        "/image/aws": {
             "post": {
                 "security": [
                     {
@@ -250,7 +250,7 @@
                 }
             }
         },
-        "/user/": {
+        "/user/auth/": {
             "get": {
                 "security": [
                     {
@@ -281,96 +281,7 @@
                 }
             }
         },
-        "/user/login": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "login user with the input payload.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "login user by given phone and email.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "get user by phone",
-                        "name": "userPhone",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "get user by email",
-                        "name": "userEmail",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/user/register": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Register user with the input payload.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Register user by given particular field.",
-                "parameters": [
-                    {
-                        "description": "Create User",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Register"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/user/{user_id}": {
+        "/user/auth/{user_id}": {
             "get": {
                 "security": [
                     {
@@ -392,7 +303,7 @@
                     {
                         "type": "string",
                         "description": "get user by id",
-                        "name": "use_id",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -408,9 +319,7 @@
                         "description": "Internal Server Error"
                     }
                 }
-            }
-        },
-        "/user/{user_id}/": {
+            },
             "put": {
                 "security": [
                     {
@@ -435,7 +344,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Register"
+                            "$ref": "#/definitions/model.Update"
                         }
                     },
                     {
@@ -496,9 +405,94 @@
                     }
                 }
             }
+        },
+        "/user/login": {
+            "post": {
+                "description": "login user with the input payload.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "login user by given phone and email.",
+                "parameters": [
+                    {
+                        "description": "login User",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user/register": {
+            "post": {
+                "description": "Register user with the input payload.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Register user by given particular field.",
+                "parameters": [
+                    {
+                        "description": "Create User",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Register"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "model.Login": {
+            "type": "object",
+            "properties": {
+                "UserEmail": {
+                    "type": "string"
+                },
+                "UserPhone": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Movie": {
             "type": "object",
             "properties": {
@@ -535,6 +529,17 @@
                     "type": "string"
                 },
                 "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Update": {
+            "type": "object",
+            "properties": {
+                "Address": {
+                    "type": "string"
+                },
+                "Name": {
                     "type": "string"
                 }
             }
